[package]
name = "groupy"
version = "0.4.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/groupy/"
homepage = "https://github.com/filecoin-project/group"
repository = "https://github.com/filecoin-project/group"
edition = "2018"

[dependencies]
fff = { path = "/home/ubuntu/ff" }
rand = { version = "0.8", optional = true, default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_xorshift = { version = "0.3", optional = true }
# serde = { version = "1", default-features = false }
subtle = { version = "2.2.1", default-features = false }
# thiserror = "1.0.10"

[features]
default = ["alloc"]
alloc = ["byteorder"]
tests = ["alloc", "rand", "rand_xorshift"]

[badges]
maintenance = { status = "actively-developed" }
